Added party alliances
Adds the following commands:
`/party alliance`
`/party alliance invite <target>`
`/party alliance accept`

Allies will share party chat and will not be able to harm eachother.
Item and XP sharing is limitied to a single party. Allowing two parties
to team up without sharing resources and XP.

Closes #1009

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -16,6 +16,7 @@ Version 1.4.08-dev
  + Added automatic cleanup of backups folder.
  + Added bypass permission for finding Fishing traps
  + Added level threshold settings to hardcore modes. When a players skill level is below this threshold, they will not lose any stats
+ + Added party alliances, two parties can now team up. Allies share party chat and cannot harm each other.
  = Fixed bug where LeafBlower permissions were ignored
  = Fixed bug with toggle commands not properly displaying the success message.
  = Fixed IllegalArgumentException caused by an empty Fishing treasure category
