--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -450,7 +450,6 @@ Commands.Healthbars.Changed.BAR=[mcMMO] Your healthbar display type was changed 
 Commands.Healthbars.Changed.DISABLED=[mcMMO] Your mob healthbars have been [[GRAY]]disabled[[WHITE]].
 Commands.Healthbars.Invalid=Invalid healthbar type!
 Commands.Inspect=<player> [[GREEN]]- View detailed player info
-Commands.Invite.Accepted=[[GREEN]]Invite Accepted. You have joined party {0}
 Commands.Invite.Success=[[GREEN]]Invite sent successfully.
 Commands.Leaderboards=<skill> <page> [[GREEN]]- Leaderboards
 Commands.mcc.Header=[[RED]]---[][[GREEN]]mcMMO Commands[[RED]][]---
@@ -486,6 +485,7 @@ Commands.Offline=[[RED]]This command does not work for offline players.
 Commands.Other=[[RED]]---[][[GREEN]]OTHER COMMANDS[[RED]][]---
 Commands.Party.Header=[[RED]]-----[][[GREEN]]PARTY[[RED]][]-----
 Commands.Party.Status=[[DARK_GRAY]]NAME: [[WHITE]]{0} {1}
+Commands.Party.Status.Alliance=[[DARK_GRAY]]ALLY: [[WHITE]]{0}
 Commands.Party.ShareMode=[[DARK_GRAY]]SHARE MODE: 
 Commands.Party.ItemShare=[[GRAY]]ITEM [[DARK_AQUA]]({0}) 
 Commands.Party.ExpShare=[[GRAY]]EXP [[DARK_AQUA]]({0})
@@ -498,6 +498,7 @@ Commands.Party.Commands=[[RED]]---[][[GREEN]]PARTY COMMANDS[[RED]][]---
 Commands.Party.Invite.0=[[RED]]ALERT: [[GREEN]]You have received a party invite for {0} from {1}
 Commands.Party.Invite.1=[[YELLOW]]Type [[GREEN]]/party accept[[YELLOW]] to accept the invite
 Commands.Party.Invite=[[GREEN]]- Send party invite
+Commands.Party.Invite.Accepted=[[GREEN]]Invite Accepted. You have joined party {0}
 Commands.Party.Join=[[GRAY]]Joined Party: {0}
 Commands.Party.Create=[[GRAY]]Created Party: {0}
 Commands.Party.Rename=[[GRAY]]Party name changed to: [[WHITE]]{0}
@@ -513,6 +514,16 @@ Commands.Party.Teleport=[[GREEN]]- Teleport to party member
 Commands.Party.Toggle=[[GREEN]]- Toggle Party Chat
 Commands.Party1=[[GREEN]]- Create a new party
 Commands.Party2=[[GREEN]]- Join a players party
+Commands.Party.Alliance.Header=[[RED]]-----[][[GREEN]]PARTY ALLIANCE[[RED]][]-----
+Commands.Party.Alliance.Ally=[[WHITE]]{0} [[DARK_GRAY]]IS ALLIED WITH: [[WHITE]]{1}
+Commands.Party.Alliance.Members.Header=[[RED]]-----[][[GREEN]]ALLIANCE MEMBERS[[RED]][]-----
+Commands.Party.Alliance.Invite.0=[[RED]]ALERT: [[GREEN]]You have received a party alliance invite for {0} from {1}
+Commands.Party.Alliance.Invite.1=[[YELLOW]]Type [[GREEN]]/party alliance accept[[YELLOW]] to accept the invite
+Commands.Party.Alliance.Invite.Accepted=[[GREEN]]Alliance invite Accepted.
+Commands.Party.Alliance.None=[[RED]]Your does not have an ally.
+Commands.Party.Alliance.AlreadyAllies=[[RED]]Your party already has an ally.
+Commands.Party.Alliance.Help.0=[[RED]]This party hasn't formed an alliance. Invite a party leader
+Commands.Party.Alliance.Help.1=[[RED]] to an alliance with [[DARK_AQUA]]/party alliance invite <player>[[RED]].
 Commands.ptp.Enabled=Party teleporting [[GREEN]]enabled
 Commands.ptp.Disabled=Party teleporting [[RED]]disabled
 Commands.ptp.NoRequests=[[RED]]You have no teleport requests at this time
@@ -585,6 +596,7 @@ Party.IsntLocked=[[RED]]This party is not locked!
 Party.Locked=[[RED]]Party is locked, only party leader may invite.
 Party.NotInYourParty=[[DARK_RED]]{0} is not in your party
 Party.NotOwner=[[DARK_RED]]You are not the party leader.
+Party.Target.NotOwner=[[DARK_RED]]{0} is not the party leader.
 Party.Owner.New=[[GREEN]]{0} is the new party leader.
 Party.Owner.NotLeader=[[DARK_RED]]You are no longer the party leader.
 Party.Owner.Player =[[GREEN]]You are now the party leader.
@@ -607,6 +619,8 @@ Party.Rename.Same=[[RED]]That is already the name of your party!
 Party.Join.Self=[[RED]]You can't join yourself!
 Party.Unlocked=[[GRAY]]Party is unlocked
 Party.Disband=[[GRAY]]The party has been disbanded
+Party.Alliance.Formed=[[GRAY]]Your party is now allies with [[GREEN]]{0}
+Party.Alliance.Disband=[[GRAY]]Your party is no longer allies with [[RED]]{0}
 Party.Status.Locked=[[DARK_RED]](INVITE-ONLY)
 Party.Status.Unlocked=[[DARK_GREEN]](OPEN)
 Party.ShareType.Exp=EXP
