--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,6 +9,7 @@ Key:
 
 Version 1.4.08-dev
  + Added the possibility to gain experience when using Fishing "Shake"
+ = Fixed IllegalArgumentException caused by an empty Fishing treasure category
 
 Version 1.4.07
  + Added XP boost to Acrobatics when wearing Boots of Feather Falling
