--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,6 +9,7 @@ Key:
 
 Version 1.4.08-dev
  + Added the possibility to gain experience when using Fishing "Shake"
+ + Added config options to disable various sound effects
  = Fixed bug with toggle commands not properly displaying the success message.
  = Fixed IllegalArgumentException caused by an empty Fishing treasure category
 
