--- a/Changelog.txt
+++ b/Changelog.txt
@@ -12,6 +12,7 @@ Version 1.4.08-dev
  + Added config options to disable various sound effects
  = Fixed bug with toggle commands not properly displaying the success message.
  = Fixed IllegalArgumentException caused by an empty Fishing treasure category
+ = Fixed bug with Salvage not reading the config value for the anvil material.
 
 Version 1.4.07
  + Added XP boost to Acrobatics when wearing Boots of Feather Falling
