--- a/src/main/resources/locale/locale_zh_TW.properties
+++ b/src/main/resources/locale/locale_zh_TW.properties
@@ -134,7 +134,6 @@ Herbalism.Effect.13=\u6563\u64ad\u83cc\u7d72\u9ad4\u81f3\u571f\u548c\u8349
 Herbalism.HylianLuck=[[GREEN]]\u8c50\u6536\u5973\u795e\u4eca\u65e5\u8207\u4f60\u540c\u5728!
 Herbalism.Listener=\u8349\u85e5\u5b78:
 Herbalism.SkillName=\u8349\u85e5\u5b78
-Herbalism.Skills.GTe.Off=[[RED]]**\u7da0\u5316\u5df2\u7ed3\u675f**
 Herbalism.Skills.GTe.On=[[GREEN]]**\u767c\u52d5\u7da0\u5316**
 Herbalism.Skills.GTe.Refresh=[[GREEN]]\u4f60\u7684 [[YELLOW]]\u7da0\u5316 [[GREEN]]\u80fd\u529b\u5df2\u53ef\u4f7f\u7528!
 Herbalism.Skills.GTe.Other.Off=[[RED]]\u7da0\u5316[[GREEN]] \u5373\u5c07\u7ed3\u675f [[YELLOW]]{0}
@@ -370,6 +369,10 @@ Commands.AdminChat.Off=\u7ba1\u7406\u54e1\u804a\u5929\u6a21\u5f0f [[RED]]\u95dc\
 Commands.AdminChat.On=\u7ba1\u7406\u54e1\u804a\u5929\u6a21\u5f0f [[GREEN]]\u958b\u555f
 Commands.AdminToggle=[[RED]]- \u5207\u63db\u7ba1\u7406\u54e1\u804a\u5929\u6a21\u5f0f
 Commands.Chat.Console=*\u63a7\u5236\u53f0*
+Commands.Cooldowns.Header=[[GOLD]]--= [[GREEN]]mcMMO \u80fd\u529b\u51b7\u537b\u6642\u9593[[GOLD]] =--
+Commands.Cooldowns.Row.N=\\  [[RED]]{0}[[WHITE]] - [[GOLD]]\u5c1a\u9918 {1} \u79d2
+Commands.Cooldowns.Row.Y=\\  [[AQUA]]{0}[[WHITE]] - [[DARK_GREEN]] \u5df2\u53ef\u4f7f\u7528!
+Commands.Database.Cooldown=[[RED]]\u518d\u6b21\u4f7f\u7528\u6b64\u547d\u4ee4\u4e4b\u524d,\u4f60\u5fc5\u9808\u7b49\u4e0a1\u79d2.
 Commands.Disabled=[[RED]]\u9019\u500b\u6307\u4ee4\u88ab\u7981\u7528\u4e86.
 Commands.DoesNotExist=[[RED]]\u6b64\u73a9\u5bb6\u4e0d\u5b58\u5728\uff01
 Commands.GodMode.Disabled=[[YELLOW]]mcMMO \u795e\u4e4b\u6a21\u5f0f\u53d6\u6d88
@@ -459,6 +462,16 @@ Commands.PowerLevel=[[DARK_RED]]\u6230\u9b25\u529b: [[GREEN]]{0}
 Commands.Reset.All=[[GREEN]]\u4f60\u5168\u90e8\u7684\u6280\u80fd\u7b49\u7d1a\u4ee5\u91cd\u7f6e\u6210\u529f.
 Commands.Reset.Single=[[GREEN]]\u4f60\u7684 {0} \u6280\u80fd\u7b49\u7d1a\u4ee5\u91cd\u7f6e\u6210\u529f.
 Commands.Reset=[[RED]]\u8a2d\u5b9a\u6280\u80fd\u7b49\u7d1a\u70ba0
+Commands.Scoreboard.Clear=[[DARK_AQUA]]\u5df2\u6e05\u9664 mcMMO \u5f97\u5206\u699c.
+Commands.Scoreboard.NoBoard=[[RED]]mcMMO \u5f97\u5206\u699c\u4e26\u672a\u555f\u7528.
+Commands.Scoreboard.Keep=[[DARK_AQUA]]mcMMO \u5f97\u5206\u699c\u6703\u6301\u7e8c\u986f\u793a\u76f4\u5230\u4f60\u8f38\u5165 [[GREEN]]/mcscoreboard clear[[DARK_AQUA]].
+Commands.Scoreboard.Timer=[[DARK_AQUA]]mcMMO \u5f97\u5206\u699c\u5c07\u5728 [[GOLD]]{1}[[DARK_AQUA]] \u79d2\u540e\u6e05\u9664.
+Commands.Scoreboard.Help.0=[[GOLD]] == [[RED]]/mcscoreboard [[GREEN]]\u8aaa\u660e [[GOLD]]==
+Commands.Scoreboard.Help.1=[[DARK_AQUA]]/mcscoreboard[[AQUA]] clear [[WHITE]] - \u6e05\u9664 McMMO \u5f97\u5206\u699c
+Commands.Scoreboard.Help.2=[[DARK_AQUA]]/mcscoreboard[[AQUA]] keep [[WHITE]] - \u6301\u7e8c\u986f\u793a mcMMO \u5f97\u5206\u699c
+Commands.Scoreboard.Help.3=[[DARK_AQUA]]/mcscoreboard[[AQUA]] \u6642\u9593 [n] [[WHITE]] - \u5728 [[LIGHT_PURPLE]]n[[WHITE]] \u79d2\u4e4b\u5f8c\u6e05\u9664 McMMO \u5f97\u5206\u699c
+Commands.Scoreboard.Tip.Keep=[[GOLD]]\u5c0f\u6280\u5de7: \u7576\u5f97\u5206\u699c\u51fa\u73fe\u6642\u8f38\u5165 [[RED]]/mcscoreboard keep[[GOLD]] \u4f86\u907f\u514d\u5b83\u6d88\u5931.
+Commands.Scoreboard.Tip.Clear=[[GOLD]]\u5c0f\u6280\u5de7: \u8f38\u5165 [[RED]]/mcscoreboard clear[[GOLD]] \u4f86\u6e05\u9664\u5f97\u5206\u699c.
 Commands.Skill.Invalid=[[RED]]\u9019\u4e0d\u662f\u4e00\u500b\u6709\u6548\u7684\u6280\u80fd\u540d\u5b57!
 Commands.Skill.Leaderboard=[[YELLOW]]--mcMMO [[BLUE]]{0}[[YELLOW]] \u6392\u884c\u699c--
 Commands.SkillInfo=[[RED]]- \u67e5\u770b\u6280\u80fd\u7684\u8a73\u7d30\u8cc7\u8a0a
@@ -722,6 +735,7 @@ Commands.Description.addxp=\u7d66\u4e88\u73a9\u5bb6mcMMO\u7d93\u9a57\u503c
 Commands.Description.hardcore=\u8abf\u6574mcMMO\u786c\u6d3e\u6bd4\u4f8b\u6216\u5207\u63db\u786c\u6d3e\u6a21\u5f0f (\u958b/\u95dc)
 Commands.Description.inspect=\u89c0\u770b\u5176\u5b83\u4f7f\u7528\u8005\u7684\u8a73\u7d30mcMMO\u8cc7\u8a0a
 Commands.Description.mcability=\u4f7f\u7528\u53f3\u9375\u767c\u52d5mcMMO\u6280\u80fd(\u958b/\u95dc)
+Commands.Description.mccooldown=\u67e5\u770b\u6240\u6709 mcMMO \u80fd\u529b\u7684\u51b7\u537b\u6642\u9593
 Commands.Description.mcgod=\u5207\u63dbmcMMo\u795e\u4e4b\u6a21\u5f0f(\u958b/\u95dc)
 Commands.Description.mchud=\u66f4\u63db\u4f60\u7684McMMO HUD\u98a8\u683c
 Commands.Description.mcmmo=\u986f\u793amcMMO\u7684\u7c21\u8981\u8aaa\u660e
@@ -730,6 +744,7 @@ Commands.Description.mcpurge= \u6e05\u9664mcMMO\u6280\u80fd\u7b49\u7d1a\u70ba0\u
 Commands.Description.mcrank=\u986f\u793a\u6240\u6709mcMMO\u7684\u6392\u540d
 Commands.Description.mcrefresh=\u66f4\u65b0\u6240\u6709McMMO\u6280\u80fd\u51b7\u537b\u6642\u9593
 Commands.Description.mcremove=\u5f9emcMMO\u8cc7\u6599\u5eab\u4e2d\u522a\u9664\u4f7f\u7528\u8005
+Commands.Description.mcscoreboard=\u7ba1\u7406\u4f60\u7684 mcMMO \u5f97\u5206\u699c
 Commands.Description.mcstats=\u986f\u793a\u4f60\u7684MMO\u7b49\u7d1a\u8207\u7d93\u9a57
 Commands.Description.mctop=\u986f\u793amcMMO\u6392\u884c\u699c
 Commands.Description.mmoedit=\u4fee\u6539\u73a9\u5bb6McMMO\u7b49\u7d1a
@@ -747,6 +762,7 @@ Commands.Description.xprate=\u8abf\u6574mcMMO\u7d93\u9a57\u503c\u6bd4\u4f8b\u621
 UpdateChecker.Outdated=\u60a8\u4f7f\u7528\u7684\u662f\u904e\u6642\u7684\u7248\u672cmcMMO\uff01
 UpdateChecker.NewAvailable=\u6709\u65b0\u7684\u7248\u672cBukkitDev\u3002
 Scoreboard.Header.PlayerStats=mcMMO \u72c0\u614b
+Scoreboard.Header.PlayerCooldowns=[[YELLOW]]mcMMO \u51b7\u537b\u6642\u9593
 Scoreboard.Header.PlayerRank=mcMMO \u6392\u540d
 Scoreboard.Header.PlayerInspect=mcMMO \u72c0\u614b:
 Scoreboard.Header.PowerLevel=\u6230\u9b25\u529b
@@ -754,6 +770,7 @@ Scoreboard.Misc.PowerLevel=\u6230\u9b25\u529b
 Scoreboard.Misc.Level=\u7b49\u7d1a
 Scoreboard.Misc.CurrentXP=\u76ee\u524d\u7d93\u9a57\u503c
 Scoreboard.Misc.RemainingXP=\u5269\u9918\u7d93\u9a57\u503c
+Scoreboard.Misc.Cooldown=[[LIGHT_PURPLE]]\u51b7\u537b\u6642\u9593
 Scoreboard.Misc.Overall=\u6574\u9ad4
 Recovery.Notice=[[RED]]\u6ce8\u610f: mcMMO[[DARK_RED]]\u7121\u6cd5\u8f09\u5165\u4f60\u7684\u8cc7\u6599.[[RED]] \u91cd\u8a665\u6b21...
 Recovery.Success=[[GREEN]]\u6210\u529f!\u4f60\u7684mcMMO\u8cc7\u6599\u5df2\u8f09\u5165.
