--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -75,35 +75,43 @@ Fishing.Ability.Info=[[RED]]P\u00eache magique : [[GRAY]] **S\'am\u00e9liore via
 Fishing.Ability.Locked.0=BLOCKE JUSQU\'A {0}+ COMPETENCE (SHAKE)
 Fishing.Ability.Rank=[[RED]]Chasseur de tr\u00e9sors : [[YELLOW]] Rang {0}/5
 Fishing.Ability.TH.MagicRate=[[RED]]Chasse magique: [[YELLOW]]{0}
+Fishing.Ability.Shake=[[RED]]Chance d\'esquive : [[YELLOW]]{0}
+Fishing.Ability.FD=[[RED]]R\u00e9gime de p\u00e9cheur: [[YELLOW]]Classement {0}
 Fishing.Effect.0=Chasseur de tr\u00e9sors
 Fishing.Effect.1=Remonte des objets inhabituels
 Fishing.Effect.2=P\u00eache magique
 Fishing.Effect.3=Remonte des objets magiques
 Fishing.Effect.4=Secousse (sur monstres)
 Fishing.Effect.5=Fait tomber des objets des monstres avec une canne \u00e0 p\u00eache
+Fishing.Effect.6=R\u00e9gime de fermier
+Fishing.Effect.7=Am\u00e9liore la nutrition des produits de la ferme
+Fishing.Chance.Raining=[[BLUE]] Bonus de pluie
 Fishing.Listener=P\u00eache :
 Fishing.Ability.TH.ItemFound=[[GRAY]]Tr\u00e9sor d\u00e9couvert !
 Fishing.Ability.TH.MagicFound=[[GRAY]]Vous ressentez quelque chose de magique dans cette prise...
 Fishing.SkillName=P\u00caCHE
 Fishing.Skillup=[[YELLOW]]Le talent p\u00eache augmente de {0}. Total ({1})
 Herbalism.Ability.DoubleDropChance=[[RED]]Double Drop: [[YELLOW]]{0}
+Herbalism.Ability.FD=[[RED]]R\u00e9gime du fermier: [[YELLOW]]Classement {0}
 Herbalism.Ability.GTe.Length=[[RED]]Dur\u00e9e de Main verte : [[YELLOW]]{0}s
 Herbalism.Ability.GTh.Chance=[[RED]]Chance Pouce Vert: [[YELLOW]]{0}
 Herbalism.Ability.GTh.Fail=[[RED]]**DOIGTS VERTS \u00c9CHOU\u00c9**
+Herbalism.Ability.GTh.Stage=[[RED]] Vos sens de jardinier vous indique que [[YELLOW]] Ce champ est en train de pousser {0}
 Herbalism.Ability.GTh=[[GREEN]]**DOIGTS VERTS**
 Herbalism.Ability.Lower=[[GRAY]]**VOUS ABAISSEZ VOTRE HOUE**
 Herbalism.Ability.Ready=[[GREEN]]**VOUS LEVEZ VOTRE HOUE**
 Herbalism.Effect.0=Main verte (Comp\u00e9tence)
 Herbalism.Effect.1=Propage les plantes / triple drops
 Herbalism.Effect.2=Doigts verts (Wheat)
+Herbalism.Effect.3=Plantation automatique apres recolte du champ
 Herbalism.Effect.5=Faire des briques avec mousse ou faire pousser l\'herbe
 Herbalism.Effect.6=R\u00e9gime de fermier
 Herbalism.Effect.7=Am\u00e9liore la nutrition des produits de la ferme
 Herbalism.Effect.8=Double drops
 Herbalism.Effect.9=Double la quantit\u00e9 r\u00e9colt\u00e9e
+Herbalism.Effect.10=Chance de l\'expert
 Herbalism.Listener=Herboristerie :
 Herbalism.SkillName=HERBORISTERIE
-Herbalism.Skills.GTe.Off=[[RED]]**Votre comp\u00e9tence Main verte est termin\u00e9e**
 Herbalism.Skills.GTe.On=[[GREEN]]**MAIN VERTE ACTIV\u00c9**
 Herbalism.Skills.GTe.Refresh=[[GREEN]]Votre comp\u00e9tence [[YELLOW]]Main verte [[GREEN]]est pr\u00eate !
 Herbalism.Skills.GTe.Other.Off=[[RED]]Main verte[[GREEN]] est termin\u00e9 pour [[YELLOW]]{0}
@@ -153,6 +161,7 @@ Repair.Effect.6=R\u00e9paration du diamant (talent {0}+)
 Repair.Effect.7=R\u00e9pare les outils et armures en diamant
 Repair.Effect.8=Forge arcanique
 Repair.Effect.9=R\u00e9pare les objets magiques
+Repair.Effect.16=Recyclage
 Repair.Listener.Anvil=[[DARK_RED]]Vous venez de poser une enclume, elle peut \u00eatre utilis\u00e9e pour r\u00e9parer votre \u00e9quipement.
 Repair.Listener.Anvil2=[[DARK_RED]]Tu as plac\u00e9 une enclume sauvage, utilises la pour r\u00e9parer les outils et armures sauvages.
 Repair.Listener=R\u00e9paration :
@@ -164,6 +173,8 @@ Repair.Skills.AdeptStone=[[DARK_RED]]Vous n\'\u00eates pas suffisamment comp\u00
 Repair.Skills.Adept=[[RED]]Vous devez avoir le niveau [[YELLOW]]{0}[[RED]] pour pouvoir r\u00e9parer [[YELLOW]]{1}
 Repair.Skills.FeltEasy=[[GRAY]]Plut\u00f4t facile.
 Repair.Skills.FullDurability=[[GRAY]]C\'est d\u00e9j\u00e0 r\u00e9par\u00e9.
+Repair.Skills.SalvageSuccess=[[GRAY]] Objet recycl\u00e9
+Repair.Skills.NotFullDurability=Vous ne pouvez pas recycler vos objets endommag\u00e9s
 Repair.Skills.Mastery=[[RED]]Maitrise en r\u00e9paration: [[YELLOW]]Extra {0} durabilit\u00e9 en place
 Repair.Skills.StackedItems=[[DARK_RED]]Vous ne pouvez pas r\u00e9parer les objets empil\u00e9s.
 Repair.Skills.Super.Chance=[[RED]]Chance Super R\u00e9paration: [[YELLOW]]{0}
@@ -189,7 +200,9 @@ Swords.Combat.Countered=[[GREEN]]**CONTRE-ATTAQUE**
 Swords.Combat.SS.Struck=[[DARK_RED]]Frapp\u00e9 par ATTAQUE D\u00c9CHIRANTE !
 Swords.Effect.0=Contre-attaque
 Swords.Effect.2=Attaque d\u00e9chirante (Comp\u00e9tence)
+Swords.Effect.3={0} DMG AoE, Saignement+ AoE
 Swords.Effect.4=Saignement d\'Attaque d\u00e9chirante
+Swords.Effect.5={0} Intervale entre les saignements
 Swords.Effect.6=Saignement
 Swords.Effect.7=Applique un saignement
 Swords.Listener=\u00c9p\u00e9es :
@@ -204,10 +217,17 @@ Swords.SS.Length=[[RED]]Dur\u00e9e d\'Attaque d\u00e9chirante : [[YELLOW]]{0}s
 Taming.Ability.Bonus.0=Attentif \u00e0 l\'environnement
 Taming.Ability.Bonus.1=Les loups \u00e9vitent les dangers
 Taming.Ability.Bonus.2=Fourrure \u00e9paisse
+Taming.Ability.Bonus.3=R\u00e9duction de d\u00e9g\u00e2t, r\u00e9sistance au feu
 Taming.Ability.Bonus.4=R\u00e9sistance aux chocs
+Taming.Ability.Bonus.5=Les explosifs font 1/{0} compar\u00e9 au dommage normal
 Taming.Ability.Bonus.6=Griffes ac\u00e9r\u00e9es
+Taming.Ability.Bonus.7=+{0} Damage
 Taming.Ability.Bonus.8=Fast food
 Taming.Ability.Bonus.9={0} Chance d\'etre soign\u00e9 lors de l\'attaque
+Taming.Ability.Locked.0=Attentif \u00e0 l\'environnement
+Taming.Ability.Locked.1=Fourrure \u00e9paisse
+Taming.Ability.Locked.2=R\u00e9sistance aux chocs
+Taming.Ability.Locked.3=Griffes ac\u00e9r\u00e9es
 Taming.Combat.Chance.Gore=[[RED]]Chance Gore: [[YELLOW]]{0}
 Taming.Effect.0=Connaissances des b\u00eates
 Taming.Effect.1=Bone-whacking inspects wolves & ocelots
@@ -288,11 +308,14 @@ Combat.Gore=[[GREEN]]**SANG**
 Combat.StruckByGore=[[RED]]**FRAPP\u00c9 JUSQU\'AU SANG**
 Combat.TargetDazed=La cible a \u00e9t\u00e9 [[DARK_RED]]\u00c9tourdi
 Combat.TouchedFuzzy=[[DARK_RED]]Vous \u00eates \u00e9tourdi.
+Commands.addlevels.AwardSkill.1=[[GREEN]]Vous avez re\u00e7u {0} niveau dans {1}!
+Commands.addxp.AwardAll=[[GREEN]]Vous avez \u00e9t\u00e9 r\u00e9compens\u00e9 de {0} experiences dans chaque comp\u00e9tences!
 Commands.Ability.Off=Utilisation des comp\u00e9tences [[RED]]Off
 Commands.Ability.On=Utilisation des comp\u00e9tences [[GREEN]]On
 Commands.AdminChat.Off=Canal admin [[RED]]Off
 Commands.AdminChat.On=Canal admin [[GREEN]]On
 Commands.AdminToggle=[[RED]]- Active / d\u00e9sactive le canal admin
+Commands.Chat.Console=*Console*
 Commands.Disabled=[[RED]]Cette commande est d\u00e9sactiv\u00e9e.
 Commands.DoesNotExist=[[RED]]Ce joueur est absent de la base de donn\u00e9es !
 Commands.GodMode.Disabled=[[YELLOW]]mcMMO Godmode d\u00e9sactiv\u00e9
@@ -303,7 +326,12 @@ Commands.Invite.Accepted=[[GREEN]]Invitation accept\u00e9e. Vous avez rejoint le
 Commands.Invite.Success=[[GREEN]]Invitation envoy\u00e9e.
 Commands.Leaderboards=<talent> <page> [[RED]]- Classement
 Commands.mcgod=[[RED]]- Active / d\u00e9sactive le Godmode
+Commands.mcrank.Heading=[[GOLD]]-=CLASSEMENT PERSONNEL=-
+Commands.mcrank.Overall=[[YELLOW]]Toutes competences confondues[[GREEN]] - [[GOLD]]Classement [[WHITE]]#[[GREEN]]{0}
+Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Classement [[WHITE]]#[[GREEN]]{1}
+Commands.mcrank.Unranked=[[WHITE]]Non class\u00e9
 Commands.mmoedit=[joueur] <talent> <valeur> [[RED]] - Modifie le niveau la cible
+Commands.mmoedit.Modified.1=[[GREEN]]Votre niveau en {0} a \u00e9t\u00e9 modifi\u00e9 \u00e0 {1}!
 Commands.ModDescription=[[RED]]- Affiche une description du mod
 Commands.NoConsole=Cette commande ne peut \u00eatre utilis\u00e9e via la console.
 Commands.Other=[[GREEN]]--AUTRES COMMANDES--
@@ -319,9 +347,11 @@ Commands.Party.Quit=[[RED]]- Quitte votre groupe actuel
 Commands.Party.Teleport=<nom> [[RED]]- T\u00e9l\u00e9porte sur un membre du groupe
 Commands.Party.Toggle=[[RED]]- Active / d\u00e9sactive le canal groupe
 Commands.PowerLevel.Leaderboard=[[YELLOW]]--Classement mcMMO ([[BLUE]]Niveau Global[[YELLOW]])--
+Commands.PowerLevel.Capped=[[DARK_RED]]NIVEAU GLOBAL: [[GREEN]]{0} [[DARK_RED]]NIVEAU MAX ATTEINT: [[YELLOW]]{1}
 Commands.PowerLevel=[[DARK_RED]]NIVEAU GLOBAL : [[GREEN]]{0}
 Commands.Reset.All=[[GREEN]]Toutes vos comp\u00e9tences ont \u00e9t\u00e9 remises \u00e0 zero.
 Commands.Reset.Single=[[GREEN]]Ta comp\u00e9tence {0} a \u00e9t\u00e9 remise \u00e0 zero.
+Commands.Reset=[[RED]] Le niveau de cette competence a \u00e9t\u00e9 reinitialiser \u00e0 0
 Commands.Skill.Invalid=[[RED]]Ce talent n\'existe pas !
 Commands.Skill.Leaderboard=[[YELLOW]]--Classement mcMMO ([[BLUE]]{0}[[YELLOW]])--
 Commands.Stats.Self=VOS STATISTIQUES
@@ -329,6 +359,8 @@ Commands.Stats=[[RED]]- Affiche vos statistiques mcMMO
 Commands.ToggleAbility=[[RED]]- Active / d\u00e9sactive l\'utilisation des comp\u00e9tences
 Commands.Usage.Level=niveau
 Commands.Usage.Player=joueur
+Commands.Usage.Skill=Comp\u00e9tence
+Commands.Usage.XP=exp
 mcMMO.NoInvites=[[RED]]Vous n\'avez pas \u00e9t\u00e9 invit\u00e9
 mcMMO.NoPermission=[[DARK_RED]]Vous n\'avez pas les droits.
 mcMMO.NoSkillNote=[[DARK_GRAY]]Si vous n\'avez pas les droits pour un talent, il n\'appara\u00eetra pas ici.
@@ -338,6 +370,8 @@ Party.IsLocked=[[RED]]Ce groupe est d\u00e9j\u00e0 verrouill\u00e9 !
 Party.IsntLocked=[[RED]]Ce groupe n\'est pas verrouill\u00e9 !
 Party.Locked=[[RED]]Le groupe est verrouill\u00e9, seul le chef de groupe peut inviter.
 Party.NotInYourParty=[[DARK_RED]]{0} is not in your party
+Party.NotOwner=[[DARK_RED]]Vous n\'etes pas le chef de ce groupe
+Party.Password.Incorrect=[[RED]]Le mot de passe du groupe est incorrecte
 Party.Password.Set=[[GREEN]]Mot de passe d\u00e9fini : {0}
 Party.Player.Invalid=[[RED]]Ce joueur n\'existe pas.
 Party.Teleport.Dead=[[RED]]Vous ne pouvez pas vous t\u00e9l\u00e9porter sur un joueur mort.
@@ -355,6 +389,7 @@ Commands.XPGain.Repair=R\u00e9paration
 Commands.XPGain.Swords=Attaquer des monstres
 Commands.XPGain.Taming=Apprivoiser et combattre
 Commands.XPGain.Unarmed=Attaquer des monstres
+Commands.XPGain.Woodcutting=Abbatage de bois
 Commands.XPGain=[[DARK_GRAY]]GAIN D\'XP : [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]Votre barre d\'XP est maintenant verrouill\u00e9e sur {0} !
 Commands.xplock.unlocked=[[GOLD]]Votre barre d\'XP est maintenant [[GREEN]]D\u00c9VERROUILL\u00c9E[[GOLD]] !!
@@ -368,6 +403,9 @@ XPRate.Event=[[GOLD]]Un \u00e9v\u00e9nement  bonus d\'XP mcMMO est actuellement 
 Effects.Effects=EFFETS
 Effects.Level=[[DARK_GRAY]]NIV : [[GREEN]]{0} [[DARK_AQUA]]XP[[YELLOW]]([[GOLD]]{1}[[YELLOW]]/[[GOLD]]{2}[[YELLOW]])
 Effects.Template=[[DARK_AQUA]]{0} : [[GREEN]]{1}
+Guides.Available=[[DARK_AQUA]]Guide pour le/la {0} est disponible - \u00e9crivez /{1} ? [page]
+Guides.Header=[[GOLD]]-=[[GREEN]]{0} Guide[[GOLD]]=-
+Guides.Page.Invalid=Le num\u00e9ro de page est invalide
 Inspect.Offline=[[RED]]Tu n\'as pas la permission d\'inspecter un joueur hors ligne!
 Inspect.OfflineStats=mcMMO Stats for Offline Player [[YELLOW]]{0}
 Inspect.Stats=[[GREEN]]mcMMO Stats for [[YELLOW]]{0}
@@ -387,3 +425,7 @@ Stats.Own.Stats=[[GREEN]][mcMMO] Statistiques
 Perks.Lucky.Desc=Donnes {0} comp\u00e9tences et abilet\u00e9s 33.3% de chance d\'\u00eatre activ\u00e9es.
 Perks.Lucky.Desc.Login=Donne \u00e0 certaines comp\u00e9tences 33.3% de chance d\'\u00eatre activ\u00e9es.
 Perks.ActivationTime.Desc=Augmente la dur\u00e9e de l\'abil\u00e9t\u00e9 de {0} secondes.
+MOTD.Donate=[[DARK_AQUA]]Donation Info:
+MOTD.PerksPrefix=[[RED]][mcMMO Comp\u00e9tences]
+MOTD.Version=[[GOLD]][mcMMO] Version [[DARK_AQUA]]{0}
+MOTD.Website=[[GOLD]][mcMMO] [[GREEN]]{0}[[YELLOW]] - mcMMO Website
