--- a/src/main/resources/locale/locale_pt_BR.properties
+++ b/src/main/resources/locale/locale_pt_BR.properties
@@ -12,59 +12,62 @@ Archery.Listener=Arqueiro
 Archery.SkillName=ARQUEIRO
 Archery.Skillup=[[AMARELO]]Habilidade Arqueiro aumentada em {0}. Total ({1})
 Axes.Ability.Bonus.0=Machado
-Axes.Ability.Lower=[[GRAY]]**VOC\u00ca ABAIXA SEU MACHADO**
-Axes.Ability.Ready=[[GREEN]]**VOC\u00ca PREPARA SEU MACHADO**
+Axes.Ability.Lower=[[GRAY]]**VOCE ABAIXA SEU MACHADO**
+Axes.Ability.Ready=[[GREEN]]**VOCE PREPARA SEU MACHADO**
 Axes.Combat.GI.Struck=[[RED]]**GOLPEADO POR UM GRANDE IMPACTO**
 Axes.Effect.3=Dano Duplo
 Axes.Effect.5=Adiciona dano extra
 Axes.Listener=Machados:
 Axes.SkillName=Machado
-Axes.Skills.SS.On=[[GREEN]]**Racha Cr\u00e2nio ATIVADO**
-Axes.Skills.SS.Refresh=[[GREEN]]Sua [[YELLOW]] Racha Cr\u00e2nio [[GREEN]] habilidade est\u00e1 pronta.
+Axes.Skills.SS.On=[[GREEN]]**Racha Cranio ATIVADO**
+Axes.Skills.SS.Refresh=[[GREEN]]Sua [[YELLOW]] Racha Cranio [[GREEN]] habilidade esta pronta.
 Axes.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] usou [[RED]]Racha Cranios!
-Axes.Skillup=[[AMARELO]]Habilidade Machado aumentada em {0}. Total ({1})
-Excavation.Ability.Lower=[[GRAY]]**VOC\u00ca ABAIXA SUA P\u00c1**
-Excavation.Ability.Ready=[[GREEN]]**VOC\u00ca PREPARA SUA P\u00c1**
+Axes.Skillup=[[YELLOW]]Habilidade em Machado aumentada em {0}. Total ({1})
+Excavation.Ability.Lower=[[GRAY]]**VOCE ABAIXA SUA PA**
+Excavation.Ability.Ready=[[GREEN]]**VOCE PREPARA SUA PA**
 Excavation.Effect.3=Habilidade de cavar tesouros
-Excavation.Listener=Escava\u00e7\u00e3o:
+Excavation.Listener=Escavacao:
 Excavation.SkillName=Escava\u00e7\u00e3o
-Excavation.Skillup=[[AMARELO]]Habilidade Escava\u00e7\u00e3o aumentada em {0}. Total ({1})
+Excavation.Skillup=[[YELLOW]]Habilidade de Escavacao aumentada em {0}. Total ({1})
+Fishing.Listener=Pescaria:
 Fishing.Ability.TH.ItemFound=[[GRAY]]Tesouro encontrado!
 Fishing.Ability.TH.MagicFound=[[GRAY]]You feel a touch of magic with this catch...
 Fishing.SkillName=PESCARIA
-Herbalism.Ability.GTh=[[GREEN]]**DED\u00c3O VERDE**
-Herbalism.Ability.Lower=[[GRAY]]**VOC\u00ca ABAIXA SUA ENXADA**
-Herbalism.Ability.Ready=[[GREEN]]**VOC\u00ca PREPARA SUA ENXADA**
+Fishing.Skillup=[[YELLOW]]Habilidade em Pescaria aumentada em {0}. Total ({1})
+Herbalism.Ability.GTh=[[GREEN]]**DEDAO VERDE**
+Herbalism.Ability.Lower=[[GRAY]]**VOCE ABAIXA SUA ENXADA**
+Herbalism.Ability.Ready=[[GREEN]]**VOCE PREPARA SUA ENXADA**
 Herbalism.Listener=Herbalismo
 Herbalism.SkillName=HERBALISMO
 Herbalism.Skills.GTe.Refresh=[[GREEN]]Sua [[YELLOW]]pronta sua habilidade de [[GREEN]]Terra Verde
 Herbalism.Skills.GTe.Other.Off=[[RED]]Terra Verde[[GREEN]] acabou para o [[YELLOW]]{0}
+Herbalism.Skillup=[[YELLOW]]Habilidade em Herbalismo aumentada em {0}. Total ({1})
 Mining.Ability.Length=[[RED]]Super Partir Duracao: [[YELLOW]]{0}s
-Mining.Ability.Lower=[[GRAY]]**VOC\u00ca ABAIXA SUA PICARETA**
-Mining.Ability.Ready=[[GREEN]]**VOC\u00ca PREPARA SUA PICARETA**
-Mining.Listener=Minera\u00e7\u00e3o:
+Mining.Ability.Lower=[[GRAY]]**VOCE ABAIXA SUA PICARETA**
+Mining.Ability.Ready=[[GREEN]]**VOCE PREPARA SUA PICARETA**
+Mining.Listener=Mineracao:
 Mining.SkillName=MINERAR
-Mining.Skills.SuperBreaker.Refresh=[[GREEN]]A tua [[YELLOW]]abilidade Super Partir [[GREEN]]esta pronta!
+Mining.Skills.SuperBreaker.Refresh=[[GREEN]]A tua [[YELLOW]]habilidade Super Partir [[GREEN]]esta pronta!
 Mining.Skillup=[[YELLOW]]Habilidade Minerar aumentada em {0}. Total ({1})
 Mining.Blast.Boom=[[GRAY]]**BOOM**
-Mining.Blast.Refresh=[[GREEN]]A tua [[YELLOW]]abilidade de explosao [[GREEN]]esta pronta!
+Mining.Blast.Refresh=[[GREEN]]A tua [[YELLOW]]habilidade de explosao [[GREEN]]esta pronta!
 Repair.Effect.0=Reparar
 Repair.Effect.4=Super Reparo
 Repair.Effect.6=Reparar Diamante ({0}+ SKILL)
 Repair.Effect.7=Reparar ferramentas e armadura de Diamante
-Repair.Effect.9=Reparar itens m\u00e1gicos
+Repair.Effect.9=Reparar itens magicos
 Repair.Listener=Reparar:
 Repair.SkillName=REPARAR
-Repair.Skills.AdeptDiamond=[[DARK_RED]]Voc\u00ea n\u00e3o tem nivel suficiente pra reparar Diamante.
+Repair.Skills.AdeptDiamond=[[DARK_RED]]Voce nao tem nivel suficiente pra reparar Diamante.
 Repair.Skills.AdeptGold=[[DARK_RED]]Voc\u00ea n\u00e3o tem nivel suficiente pra reparar Ouro.
-Repair.Skills.AdeptStone=[[DARK_RED]]Voc\u00ea n\u00e3o tem nivel suficiente pra reparar Pedra.
-Repair.Skills.FeltEasy=[[GRAY]]Isso pareceu f\u00e1cil.
-Repair.Skillup=[[YELLOW]]Habilidade Reparar aumentada em {0}. Total ({1})
+Repair.Skills.AdeptStone=[[DARK_RED]]Voce nao tem nivel suficiente pra reparar Pedra.
+Repair.Skills.FeltEasy=[[GRAY]]Isso pareceu facil.
+Repair.Skillup=[[YELLOW]]Habilidade de Reparacao aumentada em {0}. Total ({1})
 Repair.Arcane.Chance.Success=[[GRAY]]AF Percentagem de Sucesso: [[YELLOW]]{0}%
 Repair.Arcane.Fail=[[VERMELHO]]Poder misterioso saiu permanentemente do item.
-Repair.Arcane.Lost=[[RED]]Voc\u00ea n\u00e3o foi habilidoso o suficiente para manter os encantamentos.
-Swords.Ability.Lower=[[GRAY]]**VOC\u00ca ABAIXA SUA ESPADA**
-Swords.Ability.Ready=[[GREEN]]**VOC\u00ca PREPARA SUA ESPADA**
+Repair.Arcane.Lost=[[RED]]Voce nao foi habilidoso o suficiente para manter os encantamentos.
+Swords.Ability.Lower=[[GRAY]]**VOCE ABAIXA SUA ESPADA**
+Swords.Ability.Ready=[[GREEN]]**VOCE PREPARA SUA ESPADA**
 Swords.Combat.Bleeding.Stopped=[[GRAY]]O sangramento[[GREEN]]parou[[GRAY]]!
 Swords.Combat.Bleeding=[[GREEN]]**INIMIGO A SANGRAR**
 Swords.Combat.Countered=[[GREEN]]**CONTRA-ATACADO**
@@ -74,73 +77,92 @@ Swords.Listener=Espadas:
 Swords.SkillName=Espada
 Swords.Skills.SS.On=[[GREEN]]**ATAQUE DE SERRA ACTIVADO**
 Swords.Skills.SS.Other.Off=[[RED]]Ataque de cerra[[GREEN]] acabou para [[YELLOW]]{0}
-Swords.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] usou [[RED]] quebra r\u00e1pida!
+Swords.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] usou [[RED]] quebra rapida!
+Swords.Skillup=[[YELLOW]]Habilidade com Espadas aumentada em {0}. Total ({1})
 Taming.Ability.Bonus.1=Lobos evitam o perigo
 Taming.Ability.Bonus.6=Garras Afiadas
-Taming.Effect.11=Redu\u00e7\u00e3o de dano explosivo
+Taming.Effect.11=Reducao de dano explosivo
 Taming.Effect.12=Chamado da Selva
 Taming.Effect.13=Invoca um animal ao seu lado
 Taming.Effect.17=Chance dos lobos se curarem ao atacarem
 Taming.Effect.4=Garras Afiadas
-Taming.Effect.5=Dano B\u00f4nus
-Taming.Listener.Wolf=[[DARK_GRAY]]O seu lobo correu de volta \u00e0 voc\u00ea...
+Taming.Effect.5=Dano Bonus
+Taming.Listener.Wolf=[[DARK_GRAY]]O seu lobo correu de volta ate voce...
 Taming.Listener=Domar
 Taming.SkillName=DOMAR
-Taming.Skillup=[[YELLOW]]Habilidade Domesticar aumentada em {0}. Total ({1})
+Taming.Skillup=[[YELLOW]]Habilidade de Domesticar aumentada em {0}. Total ({1})
 Unarmed.Listener=Desarmado:
 Unarmed.SkillName=DESARMAR
 Unarmed.Skills.Berserk.Off=[[RED]]**Berserk acabou**
-Unarmed.Skills.Berserk.Other.Off=[[RED]]Quebra r\u00e1pida[[GREEN]] acabou para [[YELLOW]]{0}
+Unarmed.Skills.Berserk.Other.Off=[[RED]]Quebra rapida[[GREEN]] acabou para [[YELLOW]]{0}
 Unarmed.Skills.Berserk.Other.On=[[GREEN]]{0}[[DARK_GREEN]] usou [[RED]]Berserk!
 Woodcutting.Ability.0=Soprador de Folhas
 Woodcutting.Ability.1=Soprar Folhas
-Woodcutting.Effect.1=Faz \u00e1rvores explodirem.
+Woodcutting.Effect.1=Faz arvores explodirem.
 Woodcutting.Effect.4=Drops duplos
 Woodcutting.Listener=Lenhador
 Woodcutting.SkillName=Lenhador
 Woodcutting.Skills.TreeFeller.Other.Off=[[RED]]Corta Arvores[[GREEN]] acabou para o [[YELLOW]]{0}
-Woodcutting.Skills.TreeFeller.Splinter=[[RED]]SEU MACHADO QUEBRA EM DEZENAS DE PEDA\u00c7OS!
-Woodcutting.Skills.TreeFellerThreshold=[[RED]]Essa \u00e1rvore \u00e9 muito grande!
+Woodcutting.Skills.TreeFeller.Splinter=[[RED]]SEU MACHADO SE QUEBROU EM DEZENAS DE PEDACOS!
+Woodcutting.Skills.TreeFellerThreshold=[[RED]]Essa arvore e muito grande!
+Woodcutting.Skillup=[[YELLOW]]Habilidade como Lenhador aumentada em {0}. Total ({1})
 Ability.Generic.Template=[[VERMELHO]]{0}:[[AMARELO]]{1}
 Combat.ArrowDeflect=[[WHITE]]*DESVIOU A FLECHA*
 Combat.BeastLore=[[GREEN]]*CONHECIMENTO DE ANIMAIS*
-Combat.BeastLoreHealth=[[DARK_AQUA]]Health ([[GREEN]]{0}[[DARK_AQUA]]/{1})
+Combat.BeastLoreHealth=[[DARK_AQUA]]Vida ([[GREEN]]{0}[[DARK_AQUA]]/{1})
 Combat.BeastLoreOwner=[[DARK_AQUA]]Dono ([[RED]]{0}[[DARK_AQUA]])
 Combat.Gore=[[GREEN]]*MORDIDA*
 Combat.StruckByGore=[[RED]]*ATINGIDO POR MORDIDA*
 Combat.TargetDazed=Alvo foi [[DARK_RED]]Atordoado
 Combat.TouchedFuzzy=[[DARK_RED]]Visao turva. Sente Tonturas.
+Commands.addlevels.AwardAll.1=[[GREEN]]Voce ganhou {0} leveis em todas suas skills!
+Commands.addlevels.AwardAll.2=[[RED]]Todas suas skills foram alteradas para {0}.
+Commands.addlevels.AwardSkill.1=[[GREEN]]Voce ganhou {0} leveis em {1}!
+Commands.addlevels.AwardSkill.2=[[RED]]{0} foi modificado para {1}.
+Commands.addxp.AwardAll=[[GREEN]]Voce ganhou {0} experiencias em todas skills!
+Commands.addxp.AwardSkill=[[GREEN]]Voce ganhou {0} experiencias em {1}!
 Commands.AdminChat.Off=Chat Admin [[RED]]Desligado
 Commands.AdminChat.On=Chat de Admin [[GREEN]]Ligado
 Commands.AdminToggle=[[RED]]- Liga o Admin chat
-Commands.Disabled=[[RED]]Este comando est\u00e1 desabilitado.
-Commands.DoesNotExist=[[RED]]Player n\u00e3o existe na database!
+Commands.Disabled=[[RED]]Este comando esta desabilitado.
+Commands.DoesNotExist=[[RED]]Player nao existe na database!
 Commands.GodMode.Disabled=[[YELLOW]]mcMMO Modo God desabilitado
-Commands.Invite.Accepted=[[GREEN]]Convite aceito. Voc\u00ea se juntou ao grupo {0}
+Commands.GodMode.Enabled=[[YELLOW]]mcMMO Godmode Ligado
+Commands.Invite.Accepted=[[GREEN]]Convite aceito. Voce se juntou ao grupo {0}
 Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - Modifica alvo
-Commands.ModDescription=[[RED]]- Leia a descri\u00e7\u00e3o breve do mod
-Commands.NoConsole=Esse comando n\u00e3o suporta uso no console
+Commands.ModDescription=[[RED]]- Leia a descricao breve do mod
+Commands.NoConsole=Esse comando nao suporta uso no console
 Commands.Party.Accept=[[RED]]- Aceitar convite de grupo
 Commands.Party.Chat.Off=Chat de grupo [[RED]]Desligado
 Commands.Party.Commands=[[GREEN]]--COMANDOS DE GRUPO--
-Commands.Party.Invite.0=[[RED]]ALERT: [[GREEN]]Voc\u00ea recebeu um convite para o grupo {0} de {1}
-Commands.Party.Kick=[[RED]]Voc\u00ea foi kickado do grupo {0}!
-Commands.Party.Leave=[[RED]]Voc\u00ea saiu do grupo
-Commands.Party.None=[[RED]]Voc\u00ea n\u00e3o est\u00e1 em um grupo.
+Commands.Party.Invite.0=[[RED]]ALERTA: [[GREEN]]Voce recebeu um convite para o grupo {0} de {1}
+Commands.Party.Kick=[[RED]]Voce foi kickado do grupo {0}!
+Commands.Party.Leave=[[RED]]Voce saiu do grupo
+Commands.Party.None=[[RED]]Voce nao esta em um grupo.
 Commands.Party.Quit=[[RED]]- Deixe seu grupo atual
 Commands.PowerLevel.Leaderboard=[[YELLOW]]--mcMMO[[BLUE]] Nivel de Poder [[YELLOW]]Podium--
 Commands.PowerLevel=[[DARK_RED]]N\u00cdVEL DE PODER: [[GREEN]]{0}
+Commands.Scoreboard.Clear=[[DARK_AQUA]]mcMMO scoreboard sumiu.
+Commands.Scoreboard.NoBoard=[[RED]]The mcMMO scoreboard nao esta ativo.
+Commands.Scoreboard.Keep=[[DARK_AQUA]]O mcMMO scoreboard vai estar visivel ate voce usar [[GREEN]]/mcscoreboard clear[[DARK_AQUA]].
+Commands.Scoreboard.Timer=[[DARK_AQUA]]O mcMMO scoreboard vai sumir em [[GOLD]]{1}[[DARK_AQUA]] segundos.
+Commands.Scoreboard.Help.0=[[GOLD]] == [[GREEN]]Ajuda para [[RED]]/mcscoreboard[[GOLD]] ==
+Commands.Scoreboard.Help.1=[[DARK_AQUA]]/mcscoreboard[[AQUA]] clear [[WHITE]] - oculta o McMMO scoreboard
+Commands.Scoreboard.Help.2=[[DARK_AQUA]]/mcscoreboard[[AQUA]] keep [[WHITE]] - mantem o McMMO scoreboard visivel
+Commands.Scoreboard.Help.3=[[DARK_AQUA]]/mcscoreboard[[AQUA]] time [n] [[WHITE]] - oculta o McMMO scoreboard depois de [[LIGHT_PURPLE]]n[[WHITE]] segundos
+Commands.Scoreboard.Tip.Keep=[[GOLD]]Dica: Use [[RED]]/mcscoreboard keep[[GOLD]] enquanto ele estiver visivel para fazer com que ele fique sempre visivel .
+Commands.Scoreboard.Tip.Clear=[[GOLD]]Dica: Use [[RED]]/mcscoreboard clear[[GOLD]] para ocultar o McMMO scoreboard.
 Commands.Stats.Self=SEUS STATS
-mcMMO.NoPermission=[[DARK_RED]]Permiss\u00f5es insuficientes.
+mcMMO.NoPermission=[[DARK_RED]]Permissoes insuficientes.
 Party.Forbidden=[mcMMO] Parties not permitted on this world (See Permissions)
-Party.InvalidName=[[DARK_RED]]Isto n\u00e3o \u00e9 um nome v\u00e1lido.
-Party.Locked=[[RED]]Equipe est\u00e1 bloqueada, s\u00f3 o l\u00edder pode convidar.
+Party.InvalidName=[[DARK_RED]]Isto nao e um nome valido.
+Party.Locked=[[RED]]Equipe esta bloqueada, soh o lider pode convidar.
 Party.NotInYourParty=[[DARK_RED]]{0} nao est\u00e1 na sua equipe
 Party.Password.Set=[[GREEN]]Senha da equipe: {0}
-Party.Player.Invalid=[[RED]]Isto n\u00e3o \u00e9 um jogador v\u00e1lido.
-Party.Teleport.Dead=[[RED]]Voc\u00ea n\u00e3o pode teleportar para um jogador morto.
-Party.Teleport.Player=[[GREEN]]Voc\u00ea teleportou para {0}.
-Party.Teleport.Target=[[GREEN]]{0} teleportou-se para voc\u00ea.
+Party.Player.Invalid=[[RED]]Isto nao e um jogador valido.
+Party.Teleport.Dead=[[RED]]Voce nao pode teleportar para um jogador morto.
+Party.Teleport.Player=[[GREEN]]Voce teleportou para {0}.
+Party.Teleport.Target=[[GREEN]]{0} teleportou-se para voce.
 Party.Unlocked=[[GRAY]]Equipe foi Destrancada
 Commands.XPGain.Acrobatics=CAINDO
 Commands.XPGain.Archery=Atacando Monstros
@@ -154,16 +176,23 @@ Commands.XPGain=[[DARK_GRAY]]XP ADQUIRIDO: [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]Sua barra de XP BAR est\u00e1 travada em {0}!
 Commands.xplock.unlocked=[[GOLD]]Sua barra de XP foi [[GREEN]]DESTRAVADA[[GOLD]]!
 Commands.xprate.over=[[RED]]Evento de XP Rate acabou!!
-XPRate.Event=[[GOLD]]mcMMO est\u00e1 em um evento de XP aumentada! O aumento de XP \u00e9 {0}x!
+XPRate.Event=[[GOLD]]mcMMO esta em um evento de XP aumentada! O aumento de XP e {0}x!
 Effects.Effects=EFEITOS
-Inspect.OfflineStats=mcMMO Statsde player offline[[YELLOW]]{0}
-Inspect.Stats=[[GREEN]]mcMMO Stats for [[YELLOW]]{0}
-Inspect.TooFar=[[RED]]You are too far away to inspect that player!
+Inspect.OfflineStats=Estatisticas do mcMMO para o player offline [[YELLOW]]{0}
+Inspect.Stats=[[GREEN]]Estatisticas do mcMMO para [[YELLOW]]{0}
+Inspect.TooFar=[[RED]]Voce esta muito longe para inspecionar este Player!
 Item.ChimaeraWing.Fail=**ASAS DE QUIMERA FALHARAM!**
 Item.ChimaeraWing.Pass=**ASAS DE QUIMERA**
-Item.Injured.Wait=Voc\u00ea foi ferido recentemente e deve esperar para usar isto. [[YELLOW]]({0}s)
+Item.Injured.Wait=Voce foi ferido recentemente e deve esperar para usar isto. [[YELLOW]]({0}s)
 Skills.Disarmed=[[DARK_RED]]Voc\u00ea foi Desarmado!
 Skills.NeedMore=[[DARK_RED]]Voc\u00ea precisa de mais
 Skills.TooTired=[[RED]]Voc\u00ea est\u00e1 cansado pra usar essa habilidade.
+Skills.Cancelled=[[RED]]{0} cancelado!
 Stats.Header.Combat=[[GOLD]]-=SKILLS DE COMBATE=-
 Stats.Header.Gathering=[[GOLD]]-=SKILLS DE RECOLHA=-
+Stats.Header.Misc=[[GOLD]]-=OUTRAS SKILLS=-
+Scoreboard.Header.PlayerCooldowns=[[YELLOW]]mcMMO Restantes
+Scoreboard.Misc.CurrentXP=[[GREEN]]XP Atual
+Scoreboard.Misc.RemainingXP=[[YELLOW]]XP Restante
+Scoreboard.Misc.Cooldown=[[LIGHT_PURPLE]]Faltando
+Scoreboard.Misc.Overall=[[GOLD]]Geral
