Added party levels
Parties now have XP and Levels. Party features such as party teleport and party chat have to be unlocked before they can be used by the party members

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -484,8 +484,10 @@ Commands.Notifications.On=Ability notifications toggled [[GREEN]]on
 Commands.Offline=[[RED]]This command does not work for offline players.
 Commands.Other=[[RED]]---[][[GREEN]]OTHER COMMANDS[[RED]][]---
 Commands.Party.Header=[[RED]]-----[][[GREEN]]PARTY[[RED]][]-----
-Commands.Party.Status=[[DARK_GRAY]]NAME: [[WHITE]]{0} {1}
+Commands.Party.Features.Header=[[RED]]-----[][[GREEN]]FEATURES[[RED]][]-----
+Commands.Party.Status=[[DARK_GRAY]]NAME: [[WHITE]]{0} {1} [[DARK_GRAY]]LEVEL: [[DARK_AQUA]]{2}
 Commands.Party.Status.Alliance=[[DARK_GRAY]]ALLY: [[WHITE]]{0}
+Commands.Party.UnlockedFeatures=[[DARK_GRAY]]Unlocked Features: [[GRAY]][[ITALIC]]{0}
 Commands.Party.ShareMode=[[DARK_GRAY]]SHARE MODE: 
 Commands.Party.ItemShare=[[GRAY]]ITEM [[DARK_AQUA]]({0}) 
 Commands.Party.ExpShare=[[GRAY]]EXP [[DARK_AQUA]]({0})
@@ -623,13 +625,27 @@ Party.Alliance.Formed=[[GRAY]]Your party is now allies with [[GREEN]]{0}
 Party.Alliance.Disband=[[GRAY]]Your party is no longer allies with [[RED]]{0}
 Party.Status.Locked=[[DARK_RED]](INVITE-ONLY)
 Party.Status.Unlocked=[[DARK_GREEN]](OPEN)
-Party.ShareType.Exp=EXP
+Party.LevelUp=[[YELLOW]]Party level increased by {0}. Total ({1})
+Party.Feature.Chat=Party Chat
+Party.Feature.Teleport=Party Teleport
+Party.Feature.Alliance=Alliances
+Party.Feature.ItemShare=Item Sharing
+Party.Feature.XpShare=XP Sharing
+Party.Feature.Locked.Chat=LOCKED UNTIL {0}+ (PARTY CHAT)
+Party.Feature.Locked.Teleport=LOCKED UNTIL {0}+ (PARTY TELEPORT)
+Party.Feature.Locked.Alliance=LOCKED UNTIL {0}+ (ALLIANCES)
+Party.Feature.Locked.ItemShare=LOCKED UNTIL {0}+ (ITEM SHARING)
+Party.Feature.Locked.XpShare=LOCKED UNTIL {0}+ (XP SHARING)
+Party.Feature.Disabled.1=[[RED]]Party chat is not unlocked yet.
+Party.Feature.Disabled.2=[[RED]]Party teleport is not unlocked yet.
+Party.Feature.Disabled.3=[[RED]]Party alliances are not unlocked yet.
+Party.Feature.Disabled.4=[[RED]]Party item sharing is not unlocked yet.
+Party.Feature.Disabled.5=[[RED]]Party XP sharing is not unlocked yet.
+Party.ShareType.Xp=XP
 Party.ShareType.Item=ITEM
 Party.ShareMode.None=NONE
 Party.ShareMode.Equal=EQUAL
 Party.ShareMode.Random=RANDOM
-Party.ExpShare.Disabled=[[RED]]Party experience sharing is disabled.
-Party.ItemShare.Disabled=[[RED]]Party item sharing is disabled.
 Party.ItemShare.Category.Loot=Loot
 Party.ItemShare.Category.Mining=Mining
 Party.ItemShare.Category.Herbalism=Herbalism
