Switch to BukkitRunnable for Alchemy tasks, split Ingredients among 8 tiers instead of 5, related changes, and small bugfixes.

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -41,7 +41,7 @@ Alchemy.Listener=Alchemy:
 Alchemy.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (CATALYSIS)
 Alchemy.Catalysis.Speed=[[RED]]Brewing Speed: [[YELLOW]]{0}
 Alchemy.Concoctions.Rank=[[RED]]Concoctions Rank: [[YELLOW]]{0}
-Alchemy.Concoctions.Ingredients=[[RED]]Ingredients: [[YELLOW]]{0}
+Alchemy.Concoctions.Ingredients=[[RED]]Ingredients [[[YELLOW]]{0}[[RED]]]: [[YELLOW]]{1}
 Alchemy.SkillName=ALCHEMY
 Alchemy.Skillup=[[YELLOW]]Alchemy skill increased by {0}. Total ({1})
 
